Reorganzacion de folders. Seteo variables de ambiente en travis con rutas de: cxxtest, test cases y projecto. Modificar a gusto a medida que avance el proyecto, es solamente un puntapie.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,17 @@ language: cpp
 compiler: 
   - gcc
 
+env:
+  - PROJECT_PATH=./project/
+  - TEST_CASES_PATH=./test_cases/
+  - CXX_TEST_PATH=./cxxtest/
+
 before_install:
   - sudo apt-get update
   - sudo apt-get install -qq valgrind
   - sudo apt-get install cxxtest
 
 script:
-  - gcc --version
-  - bash execute.sh
-  - make
-  - valgrind --leak-check=full ./tp
+  - bash $PROJECT_PATH/execute.sh
+  - $PROJECT_PATH/make
+  - valgrind --leak-check=full $PROJECT_PATH/tp 
