Corrijo variables de ambiente de travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ compiler:
   - gcc
 
 env:
-  - PROJECT_PATH=./project/
-  - TEST_CASES_PATH=./test_cases/
-  - CXX_TEST_PATH=./cxxtest/
+  - PROJECT_PATH=./project
+  - TEST_CASES_PATH=./test_cases
+  - CXX_TEST_PATH=./cxxtest
 
 before_install:
   - sudo apt-get update
