--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,6 @@ script:
   - cd $PROJECT_PATH 
   - bash execute.sh
   - make
-  - valgrind --leak-check=full ./tp 
+  - valgrind --leak-check=full ./tp
+  - cd $TEST_CASES_PATH
+  - cxxtestgen 
