--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -5,11 +5,19 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -pedantic -I.")
 
 find_package(SDL2 REQUIRED)
 
+
+INCLUDE(FindPkgConfig) 
+PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
+PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
+PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf>=2.0.0)
+PKG_SEARCH_MODULE(SDL2MIXER REQUIRED SDL2_mixer>=2.0.0)
+
+
 #include_directories(${SDL2_INCLUDE_DIR})
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
 add_executable(client HelloWorld.cpp)
 
-target_link_libraries(client SDL2)
+target_link_libraries(client ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2TTF_LIBRARIES} ${SDL2MIXER_LIBRARIES})
 target_link_libraries(client ${PROJECT_SOURCE_DIR}/libs/libBox2D.a)
 
