Clieniente ahora tiene logo de aplicación. Proceder con funcionalidades de botón connect.

--- a/client/build-client_connector-Desktop_Qt_5_11_0_GCC_64bit-Debug/Makefile
+++ b/client/build-client_connector-Desktop_Qt_5_11_0_GCC_64bit-Debug/Makefile
@@ -224,6 +224,7 @@ DIST          = ../../../Qt/5.11.0/gcc_64/mkspecs/features/spec_pre.prf \
 		../../../Qt/5.11.0/gcc_64/mkspecs/features/qt_config.prf \
 		../../../Qt/5.11.0/gcc_64/mkspecs/linux-g++/qmake.conf \
 		../../../Qt/5.11.0/gcc_64/mkspecs/features/spec_post.prf \
+		../client_connector/.qmake.stash \
 		../../../Qt/5.11.0/gcc_64/mkspecs/features/exclusive_builds.prf \
 		../../../Qt/5.11.0/gcc_64/mkspecs/features/toolchain.prf \
 		../../../Qt/5.11.0/gcc_64/mkspecs/features/default_pre.prf \
@@ -425,6 +426,7 @@ Makefile: ../client_connector/client_connector.pro ../../../Qt/5.11.0/gcc_64/mks
 		../../../Qt/5.11.0/gcc_64/mkspecs/features/qt_config.prf \
 		../../../Qt/5.11.0/gcc_64/mkspecs/linux-g++/qmake.conf \
 		../../../Qt/5.11.0/gcc_64/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		../../../Qt/5.11.0/gcc_64/mkspecs/features/exclusive_builds.prf \
 		../../../Qt/5.11.0/gcc_64/mkspecs/features/toolchain.prf \
 		../../../Qt/5.11.0/gcc_64/mkspecs/features/default_pre.prf \
@@ -618,6 +620,7 @@ Makefile: ../client_connector/client_connector.pro ../../../Qt/5.11.0/gcc_64/mks
 ../../../Qt/5.11.0/gcc_64/mkspecs/features/qt_config.prf:
 ../../../Qt/5.11.0/gcc_64/mkspecs/linux-g++/qmake.conf:
 ../../../Qt/5.11.0/gcc_64/mkspecs/features/spec_post.prf:
+.qmake.stash:
 ../../../Qt/5.11.0/gcc_64/mkspecs/features/exclusive_builds.prf:
 ../../../Qt/5.11.0/gcc_64/mkspecs/features/toolchain.prf:
 ../../../Qt/5.11.0/gcc_64/mkspecs/features/default_pre.prf:
@@ -1045,7 +1048,42 @@ client_connector.o: ../client_connector/client_connector.cpp ../client_connector
 		../../../Qt/5.11.0/gcc_64/include/QtGui/qtouchdevice.h \
 		../../../Qt/5.11.0/gcc_64/include/QtWidgets/qtabwidget.h \
 		../../../Qt/5.11.0/gcc_64/include/QtGui/qicon.h \
-		ui_client_connector.h
+		ui_client_connector.h \
+		../../../Qt/5.11.0/gcc_64/include/QtCore/QVariant \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/QApplication \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/qapplication.h \
+		../../../Qt/5.11.0/gcc_64/include/QtCore/qcoreapplication.h \
+		../../../Qt/5.11.0/gcc_64/include/QtCore/qeventloop.h \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/qdesktopwidget.h \
+		../../../Qt/5.11.0/gcc_64/include/QtGui/qguiapplication.h \
+		../../../Qt/5.11.0/gcc_64/include/QtGui/qinputmethod.h \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/QLabel \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/qlabel.h \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/qframe.h \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/QPlainTextEdit \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/qplaintextedit.h \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/qtextedit.h \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/qabstractscrollarea.h \
+		../../../Qt/5.11.0/gcc_64/include/QtGui/qtextdocument.h \
+		../../../Qt/5.11.0/gcc_64/include/QtGui/qtextoption.h \
+		../../../Qt/5.11.0/gcc_64/include/QtGui/qtextcursor.h \
+		../../../Qt/5.11.0/gcc_64/include/QtGui/qtextformat.h \
+		../../../Qt/5.11.0/gcc_64/include/QtGui/qpen.h \
+		../../../Qt/5.11.0/gcc_64/include/QtGui/qabstracttextdocumentlayout.h \
+		../../../Qt/5.11.0/gcc_64/include/QtGui/qtextlayout.h \
+		../../../Qt/5.11.0/gcc_64/include/QtGui/qglyphrun.h \
+		../../../Qt/5.11.0/gcc_64/include/QtGui/qrawfont.h \
+		../../../Qt/5.11.0/gcc_64/include/QtGui/qfontdatabase.h \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/QPushButton \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/qpushbutton.h \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/qabstractbutton.h \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/QStatusBar \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/qstatusbar.h \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/QToolBar \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/qtoolbar.h \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/qaction.h \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/qactiongroup.h \
+		../../../Qt/5.11.0/gcc_64/include/QtWidgets/QWidget
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o client_connector.o ../client_connector/client_connector.cpp
 
 moc_client_connector.o: moc_client_connector.cpp 
