Agrego logica con el mouse para dibujar vigas donde esta el mouse. Y dibujar una viga donde se clickea... Este comportamiento estara en el editor de niveles

--- a/test_cases/test_sdl/CMakeLists.txt
+++ b/test_cases/test_sdl/CMakeLists.txt
@@ -19,7 +19,7 @@ PKG_SEARCH_MODULE(SDL2MIXER REQUIRED SDL2_mixer>=2.0.0)
 include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRs})
 
-add_executable(test_sdl main.cpp girder.cpp girder_short.cpp texture.cpp view_exceptions.cpp)
+add_executable(test_sdl main.cpp girder.cpp girder_short.cpp girder_long.cpp texture.cpp view_exceptions.cpp)
 
 target_link_libraries(test_sdl ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2TTF_LIBRARIES} ${SDL2MIXER_LIBRARIES})
 
