Cliente actualiza la tabla del lobby cada vez que el servidor le envia un nuevo estatus. Investigar si QTableWidget hace el free de la memoria de cada elemento que se inserta en la tabla con new()

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -18,10 +18,11 @@ PKG_SEARCH_MODULE(SDL2MIXER REQUIRED SDL2_mixer>=2.0.0)
 
 message("Directorio actual: ${PROJECT_SOURCE_DIR}")
 include_directories(${PROJECT_SOURCE_DIR})
+include_directories(${PROJECT_SOURCE_DIR}/yaml-cpp)
 
 qt5_wrap_ui(UIS_HEADERS
         client_connector.ui
-	client_lobby.ui
+		client_lobby.ui
 )
 
 SET(UI_RESOURCES
