--- a/client/server_mock/games.yml
+++ b/client/server_mock/games.yml
@@ -1,9 +1,13 @@
-- games_qty: 2
-
--  game_1: 
-    creator: peposo_04
-    players: 2
-
--  game_2: 
-    creator: elchavo_del8
+games:
+  - name: altojuego1
+    creator: pepe01
     players: 1
+  - name: altojuegaso2
+    creator: elcha_pulin
+    players: 3
+  - name: carrera de sogas
+    creator: rubiola12
+    players: 2
+  - name: deadmatch
+    creator: dgroll
+    players: 2
