--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -18,6 +18,7 @@ PKG_SEARCH_MODULE(SDL2MIXER REQUIRED SDL2_mixer>=2.0.0)
 
 message("Directorio actual: ${PROJECT_SOURCE_DIR}")
 include_directories(${PROJECT_SOURCE_DIR})
+include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${PROJECT_SOURCE_DIR}/include/yaml-cpp)
 
 qt5_wrap_ui(UIS_HEADERS
