Se avanza con el codigo del servidor de acuerdo a el diagrama de flujo del servidor v1.1

--- a/server/src/.vscode/settings.json
+++ b/server/src/.vscode/settings.json
@@ -37,6 +37,9 @@
         "tuple": "cpp",
         "type_traits": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "hash_map": "cpp",
+        "string": "cpp",
+        "mutex": "cpp"
     }
 }
