Implemente la camara y los renderizados de los dibujables en referencia a la camara. La camara tiene un metodo focus que recibe un Drawable. Se agrego a la clase abstracta Drawable los metodos setX y setY.

--- a/test_cases/test_sdl/CMakeLists.txt
+++ b/test_cases/test_sdl/CMakeLists.txt
@@ -35,6 +35,7 @@ add_executable(
     sprite_animation.cpp 
     worm.cpp
     map_game.cpp
+    camera.cpp
 )
 
 target_link_libraries(test_sdl ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2TTF_LIBRARIES} ${SDL2MIXER_LIBRARIES})
