inicio de integracion maxima de cliente con vista y modelado

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -pedantic -pthr
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(COMMON_SOURCE_DIR ${PROJECT_SOURCE_DIR}/../common)
+set(UI_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src/ui)
 
 find_package(SDL2 REQUIRED)
 find_package(Qt5 COMPONENTS Widgets DBus REQUIRED)
@@ -26,22 +27,39 @@ include_directories(${COMMON_SOURCE_DIR}/include)
 include_directories(${COMMON_SOURCE_DIR}/include/yaml-cpp)
 
 add_executable(	client
-		${PROJECT_SOURCE_DIR}/src/main.cpp 
-		${PROJECT_SOURCE_DIR}/src/model_sender.cpp 
+		#${PROJECT_SOURCE_DIR}/src/main.cpp
+		${UI_SOURCE_DIR}/main.cpp 
 		${COMMON_SOURCE_DIR}/src/socket.cpp
 		${COMMON_SOURCE_DIR}/src/thread.cpp
 		${COMMON_SOURCE_DIR}/src/protocol.cpp
 		${COMMON_SOURCE_DIR}/src/socket_error.cpp
 		${COMMON_SOURCE_DIR}/src/protocol_error.cpp
-		${PROJECT_SOURCE_DIR}/src/model_sender.h
+		${UI_SOURCE_DIR}/camera.cpp
+		${UI_SOURCE_DIR}/girder.cpp
+		${UI_SOURCE_DIR}/girder_long.cpp
+		${UI_SOURCE_DIR}/girder_short.cpp
+		${UI_SOURCE_DIR}/map_game.cpp
+		${UI_SOURCE_DIR}/sprite_animation.cpp
+		${UI_SOURCE_DIR}/texture.cpp
+		${UI_SOURCE_DIR}/view_exceptions.cpp
+		${UI_SOURCE_DIR}/worm.cpp
 		${COMMON_SOURCE_DIR}/src/socket.h
 		${COMMON_SOURCE_DIR}/src/thread.h
 		${COMMON_SOURCE_DIR}/src/protocol.h
 		${COMMON_SOURCE_DIR}/src/socket_error.h
 		${COMMON_SOURCE_DIR}/src/protocol_error.h
 		${COMMON_SOURCE_DIR}/src/types.h
-		${UIS_HEADERS}
-		${UI_RESOURCES_RCC}
+		${UI_SOURCE_DIR}/camera.h
+		${UI_SOURCE_DIR}/drawable.h
+		${UI_SOURCE_DIR}/girder.h
+		${UI_SOURCE_DIR}/girder_long.h
+		${UI_SOURCE_DIR}/girder_short.h
+		${UI_SOURCE_DIR}/sprite_animation.h
+		${UI_SOURCE_DIR}/texture.h
+		${UI_SOURCE_DIR}/view_exceptions.h
+		${UI_SOURCE_DIR}/view_exceptions_messages.h
+		${UI_SOURCE_DIR}/WindowGame.h
+		${UI_SOURCE_DIR}/worm.h
 		)
 
 target_link_libraries(client Qt5::Widgets Qt5::DBus)
