--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -33,16 +33,15 @@ add_executable(	server
 		${COMMON_SOURCE_DIR}/src/protocol.h
 		${COMMON_SOURCE_DIR}/src/protocol_error.h
 		${COMMON_SOURCE_DIR}/src/types.h
-#		${PROJECT_SOURCE_DIR}/src/physics/worm/WormPhysic.cpp
-#		${PROJECT_SOURCE_DIR}/src/physics/worm/WormPhysic.h
-#		${PROJECT_SOURCE_DIR}/src/entities/Worm.cpp
-#		${PROJECT_SOURCE_DIR}/src/entities/Worm.h
-#		${PROJECT_SOURCE_DIR}/src/entities
-#		${PROJECT_SOURCE_DIR}/src/physics/structures/GirderPhysic.cpp
-#		${PROJECT_SOURCE_DIR}/src/physics/structures/GirderPhysic.h
-#		${PROJECT_SOURCE_DIR}/src/entities/structures/Girder.cpp
-#		${PROJECT_SOURCE_DIR}/src/entities/structures/Girder.h
+		${PROJECT_SOURCE_DIR}/src/physics/worm/WormPhysic.cpp
+		${PROJECT_SOURCE_DIR}/src/physics/worm/WormPhysic.h
+		${PROJECT_SOURCE_DIR}/src/entities/Worm.cpp
+		${PROJECT_SOURCE_DIR}/src/entities/Worm.h
+		${PROJECT_SOURCE_DIR}/src/physics/structures/GirderPhysic.cpp
+		${PROJECT_SOURCE_DIR}/src/physics/structures/GirderPhysic.h
+		${PROJECT_SOURCE_DIR}/src/entities/structures/Girder.cpp
+		${PROJECT_SOURCE_DIR}/src/entities/structures/Girder.h
 		)
 
 target_link_libraries(server ${COMMON_SOURCE_DIR}/libs/libyaml-cpp.a)
-#target_link_libraries(server ${PROJECT_SOURCE_DIR}/libs/libBox2D.a)
+target_link_libraries(server ${PROJECT_SOURCE_DIR}/libs/libBox2D.a)
