--- a/client/map.yml
+++ b/client/map.yml
@@ -1,54 +1,76 @@
 background:
   - file: ../../resources/graphics/fondo_grande.jpg
 
-short_girders:
-  - id: 1
-    x: 600
-    y: 420
-    angle: 0
-  - id: 2
-    x: 700
-    y: 520
-    angle: 0
-  - id: 3
-    x: 800
-    y: 620
-    angle: 0
-  - id: 4
-    x: 900
-    y: 720
-    angle: 90
+static:
+  short_girders:
+    - id: 1
+      x: 600
+      y: 420
+      angle: 0
+    - id: 2
+      x: 700
+      y: 520
+      angle: 0
+    - id: 3
+      x: 800
+      y: 620
+      angle: 0
+    - id: 4
+      x: 900
+      y: 720
+      angle: 90
 
-long_girders:
-  - id: 1
-    x: 1000
-    y: 1000
-    angle: 0
-  - id: 1
-    x: 1000
-    y: 1200
-    angle: 0
-  - id: 1
-    x: 1000
-    y: 1500
-    angle: -30
+  long_girders:
+    - id: 1
+      x: 1000
+      y: 1000
+      angle: 0
+    - id: 1
+      x: 1000
+      y: 1200
+      angle: 0
+    - id: 1
+      x: 1000
+      y: 1500
+      angle: -30
 
-worms:
-  - id: 1
-    team: 1
-    name: groll
-    health: 100
-    x: 45
-    y: 120
-  - id: 2
-    team: 2
-    name: luciano
-    health: 99
-    x: 50
-    y: 130
-  - id: 3
-    team: 3
-    name: kate
-    health: 67
-    x: 60
-    y: 130
+dynamic:
+  worms:
+    - id: 1
+      team: 1
+      name: ariel
+      health: 100
+      x: 45
+      y: 120
+    - id: 2
+      team: 1
+      name: gonza
+      health: 100
+      x: 75
+      y: 120
+    - id: 3
+      team: 2
+      name: gaby
+      health: 100
+      x: 50
+      y: 130
+    - id: 4
+      team: 2
+      name: micho
+      health: 100
+      x: 60
+      y: 130
+    - id: 5
+      team: 3
+      name: tito
+      health: 100
+      x: 450
+      y: 450
+    - id: 6
+      team: 3
+      name: gordo
+      health: 100
+      x: 470
+      y: 450
+
+  
