Se agrega clase ProtectedDynamics, que mantiene un Nodo yaml con las cosas dinamicas, protegido de los accesos desde los hilos main (para lectura y actualizacion de worms y misiles) y model_redeiver (para escritura de las nuevas cosas dinamicas).

--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -40,6 +40,9 @@
         "type_traits": "cpp",
         "typeinfo": "cpp",
         "utility": "cpp",
-        "map": "cpp"
+        "map": "cpp",
+        "hash_map": "cpp",
+        "cmath": "cpp",
+        "mutex": "cpp"
     }
 }
