--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -31,6 +31,7 @@ add_executable(	client
 		${PROJECT_SOURCE_DIR}/src/main.cpp
 		${PROJECT_SOURCE_DIR}/src/event_sender.cpp
 		${PROJECT_SOURCE_DIR}/src/model_receiver.cpp
+		${PROJECT_SOURCE_DIR}/src/protected_dynamics.cpp
 		${COMMON_SOURCE_DIR}/src/socket.cpp
 		${COMMON_SOURCE_DIR}/src/thread.cpp
 		${COMMON_SOURCE_DIR}/src/protocol.cpp
@@ -50,6 +51,7 @@ add_executable(	client
 		${UI_SOURCE_DIR}/worm.cpp
 		${PROJECT_SOURCE_DIR}/src/event_sender.h
 		${PROJECT_SOURCE_DIR}/src/model_receiver.h
+		${PROJECT_SOURCE_DIR}/src/protected_dynamics.h
 		${COMMON_SOURCE_DIR}/src/socket.h
 		${COMMON_SOURCE_DIR}/src/thread.h
 		${COMMON_SOURCE_DIR}/src/protocol.h
