--- a/server/map.yml
+++ b/server/map.yml
@@ -40,37 +40,37 @@ dynamic:
       team: 1
       name: ariel
       health: 100
-      x: 45
-      y: 120
+      x: 1500
+      y: 0
     - id: 2
       team: 1
       name: gonza
       health: 100
-      x: 75
-      y: 120
+      x: 1600
+      y: 0
     - id: 3
       team: 2
       name: gaby
       health: 100
-      x: 50
-      y: 130
+      x: 1700
+      y: 0
     - id: 4
       team: 2
-      name: micho
+      name: pedro
       health: 100
-      x: 60
-      y: 130
+      x: 1800
+      y: 0
     - id: 5
       team: 3
       name: tito
       health: 100
-      x: 450
-      y: 450
+      x: 1900
+      y: 0
     - id: 6
       team: 3
-      name: gordo
+      name: gus
       health: 100
-      x: 470
-      y: 450
+      x: 2000
+      y: 0
 
   
