--- a/server/map.yml
+++ b/server/map.yml
@@ -1,6 +1,6 @@
 static:  
   background:
-    - file: ../../resources/graphics/fondo_grande.jpg
+    - file: ../../resources/graphics/fondo_oscuro.png
 
   short_girders:
     - id: 1
@@ -8,30 +8,30 @@ static:
       y: 420
       angle: 0
     - id: 2
-      x: 700
-      y: 520
+      x: 1600
+      y: 1600
       angle: 0
     - id: 3
-      x: 800
-      y: 620
+      x: 1800
+      y: 1800
       angle: 0
     - id: 4
-      x: 900
-      y: 720
+      x: 1900
+      y: 1900
       angle: 90
 
   long_girders:
     - id: 1
-      x: 1000
-      y: 1000
+      x: 2000
+      y: 2000
       angle: 0
     - id: 1
-      x: 1000
-      y: 1200
+      x: 2100
+      y: 2100
       angle: 0
     - id: 1
-      x: 1000
-      y: 1500
+      x: 2200
+      y: 2200
       angle: -30
 
 dynamic:
