Se crea clase Event que encapsula un evento detectado en el cliente. Ahora el servidor recibe este Event, y sabe cual de los clientes envio el evento.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -32,10 +32,12 @@ add_executable(	server
 		${COMMON_SOURCE_DIR}/src/thread.cpp
 		${COMMON_SOURCE_DIR}/src/protocol.cpp
 		${COMMON_SOURCE_DIR}/src/protocol_error.cpp
+		${COMMON_SOURCE_DIR}/src/event.cpp
 		${COMMON_SOURCE_DIR}/src/socket.h
 		${COMMON_SOURCE_DIR}/src/socket_error.h
 		${COMMON_SOURCE_DIR}/src/thread.h
 		${COMMON_SOURCE_DIR}/src/protocol.h
+		${COMMON_SOURCE_DIR}/src/event.h
 		${COMMON_SOURCE_DIR}/src/protocol_error.h
 		${COMMON_SOURCE_DIR}/src/types.h
 		${PROJECT_SOURCE_DIR}/src/physics/worm/WormPhysic.cpp
