--- a/server/map.yml
+++ b/server/map.yml
@@ -1,14 +1,14 @@
 static:  
   background:
-    - file: ../../resources/graphics/fondo_oscuro.png
+    - file: ../../resources/graphics/fondo_grande.jpg
 
   short_girders:
     - id: 1
-      x: 600
-      y: 420
+      x: 1550
+      y: 1500
       angle: 0
     - id: 2
-      x: 1600
+      x: 1650
       y: 1600
       angle: 0
     - id: 3
@@ -32,7 +32,7 @@ static:
     - id: 1
       x: 2200
       y: 2200
-      angle: -30
+      angle: 0
 
 dynamic:
   worms:
