--- a/server/map.yml
+++ b/server/map.yml
@@ -1,23 +1,25 @@
 static:  
   background:
-    - file: ../../resources/graphics/fondo_grande.jpg
+      file: ../../resources/graphics/lava_pattern.jpg
+      display: expanded # mosaic | expanded | centered
+  water_level: 300
 
   short_girders:
     - id: 1
-      x: 1500
-      y: 1500
+      x: 1250
+      y: 750
       angle: 0
     - id: 2
-      x: 1650
-      y: 1600
+      x: 1350
+      y: 750
       angle: 0
     - id: 3
-      x: 1800
-      y: 1300
-      angle: 30
+      x: 1450
+      y: 750
+      angle: 45
     - id: 4
-      x: 1900
-      y: 1900
+      x: 1550
+      y: 750
       angle: 90
 
   long_girders:
@@ -26,16 +28,16 @@ static:
       y: 50
       angle: 0
     - id: 2
-      x: 2000
-      y: 2000
+      x: 1150
+      y: 750
       angle: 0
     - id: 3
-      x: 2100
-      y: 2100
+      x: 1050
+      y: 750
       angle: 0
     - id: 4
-      x: 2200
-      y: 2200
+      x: 950
+      y: 750
       angle: 0
 
 dynamic:
@@ -46,42 +48,41 @@ dynamic:
       health: 100
       x: 0
       y: 0
-
     - id: 1
       team: 1
       name: ariel
       health: 100
-      x: 1500
+      x: 750
       y: 0
     - id: 2
       team: 1
       name: gonza
       health: 100
-      x: 1600
+      x: 850
       y: 0
     - id: 3
       team: 2
       name: gaby
       health: 100
-      x: 1700
+      x: 950
       y: 0
     - id: 4
       team: 2
       name: pedro
       health: 100
-      x: 1800
-      y: 1300
+      x: 1050
+      y: 0
     - id: 5
       team: 3
       name: bianca
       health: 100
-      x: 1900
+      x: 1150
       y: 0
     - id: 6
       team: 3
       name: gus
       health: 100
-      x: 2000
+      x: 1250
       y: 0
 
   
