Empece a implementer el editor. Por alguna razon el la camara cuando se la quiere desplazar recibe dos eventos. Apenas inicia el programa se debe enviar un evento para que se dibuje la viga en el mouse

--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -5,7 +5,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -pedantic -pthr
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(COMMON_SOURCE_DIR ${PROJECT_SOURCE_DIR}/../common)
-set(UI_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src/ui)
 set(CLIENT_RESOURCES ${PROJECT_SOURCE_DIR}/../client/src/ui)
 
 find_package(SDL2 REQUIRED)
@@ -22,7 +21,7 @@ include_directories(${PROJECT_SOURCE_DIR})
 include_directories(${COMMON_SOURCE_DIR})
 include_directories(${PROJECT_SOURCE_DIR}/src)
 include_directories(${COMMON_SOURCE_DIR}/src)
-include_directories(${UI_SOURCE_DIR})
+include_directories(${CLIENT_RESOURCES})
 include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${COMMON_SOURCE_DIR}/include)
 include_directories(${COMMON_SOURCE_DIR}/include/yaml-cpp)
@@ -39,6 +38,7 @@ add_executable(	editor
 		${CLIENT_RESOURCES}/view_exceptions.cpp
 		${CLIENT_RESOURCES}/sprite_animation.cpp
 		${CLIENT_RESOURCES}/water.cpp
+		${CLIENT_RESOURCES}/window_game.cpp
 		${CLIENT_RESOURCES}/worm.cpp
 		${COMMON_SOURCE_DIR}/src/thread.h
 		${COMMON_SOURCE_DIR}/src/types.h
@@ -54,6 +54,7 @@ add_executable(	editor
 		${CLIENT_RESOURCES}/view_exceptions.h
 		${CLIENT_RESOURCES}/view_exceptions_messages.h
 		${CLIENT_RESOURCES}/water.h
+		${CLIENT_RESOURCES}/window_game.h
 		${CLIENT_RESOURCES}/worm.h
 		)
 
