Avanzo con el editor. Solo se pueden dibujar 3 gusanos por equipo y las cantidades de vigas que se quiere. En el main estan los parametros aclarados que luego seran configurables por una interfaz hecha en QT

--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -33,6 +33,7 @@ add_executable(	editor
 		${CLIENT_RESOURCES}/girder.cpp
 		${CLIENT_RESOURCES}/girder_long.cpp
 		${CLIENT_RESOURCES}/girder_short.cpp
+		${CLIENT_RESOURCES}/inventory.cpp
 		${CLIENT_RESOURCES}/font.cpp
 		${CLIENT_RESOURCES}/texture.cpp
 		${CLIENT_RESOURCES}/view_exceptions.cpp
