--- a/server/map.yml
+++ b/server/map.yml
@@ -39,46 +39,58 @@ static:
       x: 850
       y: 750
       angle: 0
+    - id: 4
+      x: 950
+      y: 750
+      angle: 0
+    - id: 4
+      x: 850
+      y: 750
+      angle: 0
+    - id: 4
+      x: 750
+      y: 750
+      angle: -30
 
 dynamic:
   worms:
-    - id: 0
+    - id: 1
       team: 1
       name: Worm Test
       health: 100
-      x: 0
+      x: 800
       y: 0
-    - id: 1
+    - id: 2
       team: 1
       name: ariel
       health: 100
       x: 750
       y: 0
-    - id: 2
+    - id: 3
       team: 1
       name: gonza
       health: 100
       x: 850
       y: 0
-    - id: 3
+    - id: 4
       team: 2
       name: gaby
       health: 100
       x: 950
       y: 0
-    - id: 4
+    - id: 5
       team: 2
       name: pedro
       health: 100
       x: 1050
       y: 0
-    - id: 5
+    - id: 6
       team: 3
       name: bianca
       health: 100
       x: 1150
       y: 0
-    - id: 6
+    - id: 7
       team: 3
       name: gus
       health: 100
