--- a/server/map.yml
+++ b/server/map.yml
@@ -60,41 +60,69 @@ dynamic:
       health: 100
       x: 800
       y: 0
+      status:
+        grounded: 0
+        falling: 1
+        mirrored: 1
     - id: 2
       team: 1
       name: ariel
       health: 100
       x: 750
       y: 0
+      status:
+        grounded: 0
+        falling: 1
+        mirrored: 1
     - id: 3
       team: 1
       name: gonza
       health: 100
       x: 850
       y: 0
+      status:
+        grounded: 0
+        falling: 1
+        mirrored: 1
     - id: 4
       team: 2
       name: gaby
       health: 100
       x: 950
       y: 0
+      status:
+        grounded: 0
+        falling: 1
+        mirrored: 1
     - id: 5
       team: 2
       name: pedro
       health: 100
       x: 1050
       y: 0
+      status:
+        grounded: 0
+        falling: 1
+        mirrored: 1
     - id: 6
       team: 3
       name: bianca
       health: 100
       x: 1150
       y: 0
+      status:
+        grounded: 0
+        falling: 1
+        mirrored: 1
     - id: 7
       team: 3
       name: gus
       health: 100
       x: 1250
       y: 0
+      status:
+        grounded: 0
+        falling: 1
+        mirrored: 1
 
   
