--- a/server/map.yml
+++ b/server/map.yml
@@ -64,6 +64,7 @@ dynamic:
         grounded: 0
         falling: 1
         mirrored: 0
+        walking: 0
     - id: 2
       team: 1
       name: ariel
@@ -74,6 +75,7 @@ dynamic:
         grounded: 0
         falling: 1
         mirrored: 1
+        walking: 0
     - id: 3
       team: 1
       name: gonza
@@ -84,6 +86,7 @@ dynamic:
         grounded: 0
         falling: 1
         mirrored: 0
+        walking: 0
     - id: 4
       team: 2
       name: gaby
@@ -94,6 +97,7 @@ dynamic:
         grounded: 0
         falling: 1
         mirrored: 0
+        walking: 0
     - id: 5
       team: 2
       name: pedro
@@ -104,6 +108,7 @@ dynamic:
         grounded: 0
         falling: 1
         mirrored: 0
+        walking: 0
     - id: 6
       team: 3
       name: bianca
@@ -114,6 +119,7 @@ dynamic:
         grounded: 0
         falling: 1
         mirrored: 0
+        walking: 0
     - id: 7
       team: 3
       name: gus
@@ -124,5 +130,6 @@ dynamic:
         grounded: 0
         falling: 1
         mirrored: 0
+        walking: 0
 
   
