--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -88,6 +88,8 @@ add_executable(	server
 		${PROJECT_SOURCE_DIR}/src/physics/ExplosionManager.h
 		${PROJECT_SOURCE_DIR}/src/physics/QueryCallback.cpp
 		${PROJECT_SOURCE_DIR}/src/physics/QueryCallback.h
+		${PROJECT_SOURCE_DIR}/src/entities/weapons/Weapon.cpp
+		${PROJECT_SOURCE_DIR}/src/entities/weapons/Weapon.h
 		)
 
 target_link_libraries(server ${COMMON_SOURCE_DIR}/libs/libyaml-cpp.a)
