--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -44,6 +44,8 @@ add_executable(	client
 		${UI_SOURCE_DIR}/girder_long.cpp
 		${UI_SOURCE_DIR}/girder_short.cpp
 		${UI_SOURCE_DIR}/inventory.cpp
+		${UI_SOURCE_DIR}/inventory_weapons.cpp
+		${UI_SOURCE_DIR}/inventory_editor.cpp
 		${UI_SOURCE_DIR}/font.cpp
 		${UI_SOURCE_DIR}/sprite_animation.cpp
 		${UI_SOURCE_DIR}/texture.cpp
@@ -69,6 +71,8 @@ add_executable(	client
 		${UI_SOURCE_DIR}/girder_long.h
 		${UI_SOURCE_DIR}/girder_short.h
 		${UI_SOURCE_DIR}/inventory.h
+		${UI_SOURCE_DIR}/inventory_weapons.h
+		${UI_SOURCE_DIR}/inventory_editor.h
 		${UI_SOURCE_DIR}/font.h
 		${UI_SOURCE_DIR}/sprite_animation.h
 		${UI_SOURCE_DIR}/texture.h
