Implemente la clase MapGame en donde se van guardando los states de mapa que se va dibujando con el editor de mapa. Tiene la funcionalidad de Deshacer (CTRL+Z) y Rehacer (CTRL+Y). Tuve que agregarle un metodo al EditorInventory para updatear los 'supplies' de los gusanos porque cuando se deshacia o rehacia algun cambio en el editor quizas cambiaban los gusanos dibujados

--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -28,6 +28,7 @@ include_directories(${COMMON_SOURCE_DIR}/include/yaml-cpp)
 
 add_executable(	editor
 		${PROJECT_SOURCE_DIR}/src/main.cpp
+		${PROJECT_SOURCE_DIR}/src/map_game.cpp
 		${COMMON_SOURCE_DIR}/src/thread.cpp
 		${CLIENT_RESOURCES}/camera.cpp
 		${CLIENT_RESOURCES}/girder.cpp
@@ -43,6 +44,7 @@ add_executable(	editor
 		${CLIENT_RESOURCES}/water.cpp
 		${CLIENT_RESOURCES}/window_game.cpp
 		${CLIENT_RESOURCES}/worm.cpp
+		${PROJECT_SOURCE_DIR}/src/map_game.h
 		${COMMON_SOURCE_DIR}/src/thread.h
 		${COMMON_SOURCE_DIR}/src/types.h
 		${CLIENT_RESOURCES}/camera.h
